# harbor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/assets/: harbor.icns
crates/app/src/: app_icon.rs  assets.rs  fonts.rs  github_api.rs  main.rs
crates/domain/: Cargo.toml
crates/domain/benches/: review_thread_index.rs
crates/domain/src/: checks.rs  diff.rs  diff_reviews.rs  lib.rs  repository.rs  reviews.rs  workflows.rs
crates/git/: Cargo.toml
crates/git/src/: external_apps.rs  lib.rs
crates/github/: Cargo.toml
crates/github/src/: api.rs  client.rs  dto.rs  dto_checks.rs  dto_pull_requests.rs  dto_repositories.rs  dto_reviews.rs  dto_workflows.rs  lib.rs  session.rs  transport.rs
crates/github/src/client/: pull_requests.rs  repositories.rs  requests.rs  reviews.rs  test_support.rs  tests.rs  workflows.rs
crates/github/src/client/tests/: pull_requests.rs  repositories.rs  reviews.rs  workflows.rs
crates/github/src/dto_pull_requests/: file_viewed_states.rs  tests.rs
crates/github/src/dto_reviews/: tests.rs
crates/github/src/transport/: coordinator.rs  errors.rs  gh_cli.rs  gh_command.rs  oauth.rs  octocrab.rs  response.rs  tests.rs
crates/github/src/transport/coordinator/: dedupe.rs  rate_limit.rs
crates/logs/: Cargo.toml
crates/logs/benches/: parser.rs
crates/logs/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: http_cache.rs  lib.rs  pull_request_cache.rs  (+7 more)
crates/sync/: Cargo.toml
crates/sync/src/: changes.rs  inbox.rs  lib.rs  policy.rs  pull_request_detail.rs  pull_request_reviews.rs
crates/sync/src/inbox/: cache.rs  enrichment.rs  http_cache.rs  light_refresh.rs
crates/ui/: Cargo.toml
crates/ui/assets/fonts/lilex/: license.txt
crates/ui/src/: actions.rs  date_time.rs  diff.rs  diff_reviews.rs  fake_data.rs  file_icons.rs  github.rs  icons.rs  lib.rs  material_file_icons.rs  panels.rs  test_fixtures.rs  tests.rs  visual.rs  workspace.rs
crates/ui/src/panels/: changed_file_rows.rs  checks.rs  chrome.rs  commits.rs  diff_view.rs  logs.rs  pull_request.rs  pull_request_signals.rs  review.rs  review_markdown.rs  review_thread_chrome.rs  review_thread_rows.rs  workflows.rs
crates/ui/src/panels/checks/: model.rs
crates/ui/src/panels/diff_view/: file_section.rs  inline_review_avatars.rs  inline_review_comment_actions.rs  inline_review_comments.rs  inline_review_layout.rs  inline_review_reactions.rs  inline_review_threads.rs  inline_reviews.rs  layout.rs  line_style.rs  row_render.rs  row_render_tests.rs  row_state.rs
crates/ui/src/panels/diff_view/inline_reviews/: tests.rs
crates/ui/src/panels/diff_view/layout/: tests.rs
crates/ui/src/panels/pull_request/: tests.rs
crates/ui/src/panels/review/: diff_preview.rs  model.rs  tests.rs
crates/ui/src/panels/workflows/: runs.rs  sidebar.rs
crates/ui/src/workspace/: action_commands.rs  async_updates.rs  auth.rs  auth_cli.rs  auth_oauth.rs  auth_state.rs  cache.rs  changed_file_interactions.rs  changed_files.rs  codeowners.rs  commands.rs  external_apps.rs  github_service.rs  github_service_auth.rs  github_service_test_support.rs  github_service_tests.rs  github_service_traits.rs  initialization.rs  loaders.rs  local_commands.rs  navigation_commands.rs  notifications.rs  panel_commands.rs  pull_request_ci_loaders.rs  pull_request_commit_loaders.rs  pull_request_description_actions.rs  pull_request_detail_cache_loader.rs  pull_request_detail_content_loaders.rs  pull_request_detail_loaders.rs  pull_request_filters.rs  pull_request_inbox_refresh.rs  pull_request_metadata_actions.rs  render.rs  repository_actions_loaders.rs  repository_loaders.rs  review_data_loaders.rs  review_interactions.rs  review_state.rs  review_submissions.rs  reviews.rs  (+8 more)
crates/ui/src/workspace/cache/: tests.rs
crates/ui/src/workspace/changed_files/: tests.rs
crates/ui/src/workspace/github_service_test_support/: actions.rs  queues.rs
crates/ui/src/workspace/github_service_tests/: action_results.rs  auth.rs  cache.rs  file_viewed_state.rs  focus.rs  inbox.rs  loading.rs  review.rs  selected_pull_request.rs
crates/ui/src/workspace/github_service_traits/: auth.rs  pull_requests.rs  repositories.rs  reviews.rs  workflows.rs
crates/ui/src/workspace/loaders/: load_more.rs  prefetch_counts.rs  prefetch_visible_rows.rs
crates/ui/src/workspace/local_commands/: open_with.rs
crates/ui/src/workspace/render/: auth_gate.rs  auth_gate_signed_out.rs  auth_preview.rs  auth_preview_elements.rs  changed_file_filter_rows.rs  changed_file_filters.rs  changed_files.rs  details.rs  header.rs  inbox.rs  inbox_body.rs  inbox_filters.rs  inbox_header.rs  inbox_page_footer.rs  inbox_search.rs  inbox_search_rows.rs  panel.rs  pending_review.rs  pull_request_details_header.rs  pull_request_overview.rs  rate_limits.rs  review_action_comment_dialog.rs  settings.rs  settings_account.rs  settings_auth_methods.rs  settings_auth_status.rs  status_bar.rs
crates/ui/src/workspace/render/header/: github_auth.rs  open_with.rs  repository_switcher_rows.rs  switchers.rs
crates/ui/src/workspace/render/pull_request_overview/: activity.rs  description.rs  events.rs  model.rs  readiness.rs  sidebar.rs  timeline.rs
crates/ui/src/workspace/review_data_loaders/: load_mode.rs  pending_review.rs
crates/ui/src/workspace/review_interactions/: comment_actions.rs  composer.rs  reactions.rs  thread_replies.rs  thread_state_actions.rs
crates/ui/src/workspace/review_submissions/: inline_comments.rs  pending_reviews.rs
crates/ui/src/workspace/reviews/: composer.rs  types.rs
crates/ui/src/workspace/state/: changed_files.rs  checks.rs  detail.rs  inbox.rs  notification.rs  overview.rs  panel_lists.rs  repository.rs  repository_actions.rs  review_composer.rs  review_runtime.rs  selection.rs  sync_runtime.rs  tasks.rs  workflow_log.rs
crates/ui/src/workspace/state/review_runtime/: actions.rs  optimistic_comments.rs
crates/ui/src/workspace/switchers/: tests.rs
script/: clippy  fmt  package-macos  test
(+2 files in other folders)
