[workspace]
members = [
    "crates/app",
    "crates/domain",
    "crates/git",
    "crates/github",
    "crates/logs",
    "crates/storage",
    "crates/sync",
    "crates/ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
publish = false
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-async-std", "sqlite"] }
thiserror = "2"
tracing = "0.1"

[profile.dev.package]
gpui = { opt-level = 3 }
gpui-component = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
