[workspace]
members = [
    "crates/app",
    "crates/domain",
    "crates/git",
    "crates/github",
    "crates/logs",
    "crates/storage",
    "crates/sync",
    "crates/ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
http = "1"
http-body-util = "0.1"
octocrab = "0.50"
reqwest_client = { git = "https://github.com/zed-industries/zed" }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-async-std", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.dev.package]
gpui = { opt-level = 3 }
gpui-component = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
