[package]
name = "harbor-app"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
gpui.workspace = true
gpui-component-assets.workspace = true
gpui-component.workspace = true
gpui_platform.workspace = true
harbor-ui = { path = "../ui" }
reqwest_client.workspace = true
rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
