[package]
name = "harbor-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "harbor"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component-assets.workspace = true
gpui-component.workspace = true
gpui_platform.workspace = true
harbor-ui = { path = "../ui" }
reqwest_client.workspace = true
rustls.workspace = true
rust-embed = { version = "8.11", features = ["include-exclude"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa.workspace = true
