[package]
name = "harbor-github"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
harbor-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
thiserror.workspace = true
