[package]
name = "harbor-github"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
harbor-domain = { path = "../domain" }
http.workspace = true
http-body-util.workspace = true
octocrab.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
zip.workspace = true
