[package]
name = "harbor-sync"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
harbor-domain = { path = "../domain" }
harbor-github = { path = "../github" }
harbor-storage = { path = "../storage" }
tracing.workspace = true
