[package]
name = "harbor-ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
gpui.workspace = true
gpui-component.workspace = true
harbor-domain = { path = "../domain" }
harbor-github = { path = "../github" }
harbor-logs = { path = "../logs" }
harbor-storage = { path = "../storage" }
