[package]
name = "harbor-ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
gpui.workspace = true
gpui-component = { workspace = true, features = ["tree-sitter-languages"] }
harbor-domain = { path = "../domain" }
harbor-git = { path = "../git" }
harbor-github = { path = "../github" }
harbor-logs = { path = "../logs" }
harbor-storage = { path = "../storage" }
harbor-sync = { path = "../sync" }
notify-rust = "4"
tracing.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
